--- a/acg/index.html
+++ b/acg/index.html
@@ -11,8 +11,9 @@
 </head>
 <body class="black">
     <div id="content">
-        <div id="color-hair" class="color-card-list">
-
+        <div class="color-card-list">
+            <h2>头发</h2>
+            <div id="color-hair"></div>
         </div>
         <div id="color-info">
             <div class="color-info-content">
@@ -23,6 +24,10 @@
                     <div class="color-data-rgb">RGB: <span id="color-data-rgb">0, 0, 0</span></div>
                     <div class="color-data-hsv">HSV: <span id="color-data-hsv">0°, 0, 0</span></div>
                 </div>
+                <footer>
+                    <p>我们采集了许多 ACG 人物的颜色，尽可能地选用了官方配色。人物名称后面的颜色名称仅供参考，对于难以定义的颜色，我们尊重原作者的设定。</p>
+                    <p><a href="../index.html">光棱镜</a> © 2021 Sheep-realms</p>
+                </footer>
             </div>
         </div>
     </div>
