--- a/acg/index.html
+++ b/acg/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ACG人物 - 光棱镜</title>
     <link rel="stylesheet" href="../common/css/common.css">
     <script src="../common/js/jquery-1.7.2.min.js"></script>
     <script src="js/color.js"></script>
