--- a/acg/index.html
+++ b/acg/index.html
@@ -25,7 +25,7 @@
                     <div class="color-data-hsv">HSV: <span id="color-data-hsv">0°, 0, 0</span></div>
                 </div>
                 <footer>
-                    <p>我们采集了许多 ACG 人物的颜色，尽可能地选用了官方配色。人物名称后面的颜色名称仅供参考，对于难以定义的颜色，我们尊重原作者的设定。</p>
+                    <p>我们采集了许多 ACG 人物的颜色，尽可能地选用了官方配色和官方配色差异较小的人物。人物名称后面的颜色名称仅供参考，对于难以定义的颜色，我们尊重原作者的设定。</p>
                     <p><a href="../index.html">光棱镜</a> © 2021 Sheep-realms</p>
                 </footer>
             </div>
