--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h2>关于 光棱镜</h2>
             <p>光棱镜是一个收集各类 ACG 元素配色的项目，以供欣赏与参考。收录的颜色包括发色、瞳色、肤色、服装配色等等。</p>
             <p>我们采集了许多 ACG 人物的颜色，尽可能地选用了官方配色和官方配色差异较小的人物。人物名称后面的颜色名称仅供参考，对于难以定义的颜色，我们尊重原作者的设定。</p>
+            <p>在探索颜色的过程中，如果你累了，不妨试试点一下底部的“切换饱和度”歇一歇。</p>
 
             <h2>子项目</h2>
             <div id="color-menu1"></div>
