--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
             <p>我们采集了许多 ACG 人物的颜色、服饰设计配色、UI设计中的配色、品牌设计的主题色、印象色等等。</p>
             <p>在探索颜色的过程中，如果你累了，不妨试试点一下底部的“切换饱和度”歇一歇。</p>
 
-            <h2>子项目</h2>
+            <h2>ACG</h2>
             <div id="color-menu1"></div>
+
+            <h2>平面设计</h2>
+            <div id="color-menu2"></div>
 
             <h2>一些吐槽</h2>
             <p>其实这些也不一定就是标准颜色，也不能说哪个颜色不好看，每个人的审美都是不同的，能有自己最喜欢的颜色那是最好。</p>
@@ -36,7 +39,7 @@
                 <div class="title">光棱镜</div>
                 <div class="color-rgb-line"><div class="r"><div></div></div><div class="g"><div></div></div><div class="b"><div></div></div></div>
                 <footer>
-                    <p><a href="index.html">光棱镜</a> © 2021 <a href="https://github.com/sheep-realms" target="_blank">Sheep-realms</a> | <a href="https://github.com/sheep-realms/Light-Prism" target="_blank">GitHub</a> | <a href="javascript: void(0);" id="color-gray">切换饱和度</a></p>
+                    <p><a href="index.html">光棱镜</a> © 2021 <a href="https://github.com/sheep-realms" target="_blank">Sheep-realms</a> | <a href="https://github.com/sheep-realms/Light-Prism" target="_blank">GitHub</a> | <a href="javascript: void(0);" id="color-gray">切换饱和度</a> | <a href="javascript: void(0);" id="color-rotate">转一转</a></p>
                 </footer>
             </div>
         </div>
@@ -46,6 +49,7 @@
     <script src="common/js/common.js"></script>
     <script>
         colorCardMenuLoad(colorMenu1, $('#color-menu1'));
+        colorCardMenuLoad(colorMenu2, $('#color-menu2'));
         colorCardMenuLoad(colorMenu99, $('#color-menu99'));
     </script>
 </body>
