--- a/ui/index.html
+++ b/ui/index.html
@@ -30,7 +30,7 @@
                 <footer>
                     <p>每一款配色方案都是设计师们精心构思的结晶。</p>
                     <p>我们采集了部分优秀案例的配色方案，如果您感兴趣，我们备注了这些配色方案的来源，您可以自行查阅。</p>
-                    <p><a href="../index.html">光棱镜</a> © 2021 <a href="https://github.com/sheep-realms" target="_blank">Sheep-realms</a> | <a href="https://github.com/sheep-realms/Light-Prism" target="_blank">GitHub</a> | <a href="javascript: void(0);" id="color-gray">切换饱和度</a></p>
+                    <p><a href="../index.html">光棱镜</a> © 2021 <a href="https://github.com/sheep-realms" target="_blank">Sheep-realms</a> | <a href="https://github.com/sheep-realms/Light-Prism" target="_blank">GitHub</a> | <a href="javascript: void(0);" id="color-gray">切换饱和度</a> | <a href="javascript: void(0);" id="color-rotate">转一转</a></p>
                 </footer>
             </div>
         </div>
