--- a/body/index.html
+++ b/body/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <footer>
                     <p>我们采集了许多 ACG 人物的颜色，尽可能地选用了官方配色和官方配色差异较小的人物。人物名称后面的颜色名称仅供参考，对于难以定义的颜色，我们尊重原作者的设定。</p>
-                    <p><a href="../index.html">光棱镜</a> © 2021 <a href="https://github.com/sheep-realms" target="_blank">Sheep-realms</a> | <a href="https://github.com/sheep-realms/Light-Prism" target="_blank">GitHub</a> | <a href="javascript: void(0);" id="color-gray">切换饱和度</a></p>
+                    <p><a href="../index.html">光棱镜</a> © 2021 <a href="https://github.com/sheep-realms" target="_blank">Sheep-realms</a> | <a href="https://github.com/sheep-realms/Light-Prism" target="_blank">GitHub</a> | <a href="javascript: void(0);" id="color-gray">切换饱和度</a> | <a href="javascript: void(0);" id="color-rotate">转一转</a></p>
                 </footer>
             </div>
         </div>
