--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <div class="title">光棱镜</div>
                 <div class="color-rgb-line"><div class="r"><div></div></div><div class="g"><div></div></div><div class="b"><div></div></div></div>
                 <footer>
+                    <p class="hover-show">现实世界的颜色没有那么丰富多彩，但是我们可以在虚拟的世界中找到自己最喜欢的颜色。</p>
                     <p><a href="index.html">光棱镜</a> © 2021 <a href="https://github.com/sheep-realms" target="_blank">Sheep-realms</a> | <a href="https://github.com/sheep-realms/Light-Prism" target="_blank">GitHub</a> | <a href="javascript: void(0);" id="color-gray">切换饱和度</a> | <a href="javascript: void(0);" id="color-rotate">转一转</a></p>
                 </footer>
             </div>
