--- a/ui/index.html
+++ b/ui/index.html
@@ -12,10 +12,10 @@
 <body class="black">
     <div id="content">
         <div class="color-card-list">
-            <h2>功能色</h2>
+            <h2 id="h2-fun">功能色</h2>
             <div id="color-hair"></div>
 
-            <h2>结语</h2>
+            <h2 id="h2-end">结语</h2>
             <p>每一款配色方案都是设计师们精心构思的结晶。UI设计的初衷除了体现品牌文化、展现出赏心悦目的界面，更应当追求易用性。图形与颜色的信息传递效率往往要高于文字，优秀的UI设计在美化界面的同时也使得产品方便易用。</p>
         </div>
         <div id="color-info">
@@ -26,6 +26,12 @@
                     <div class="color-data-hex">HEX: <span id="color-data-hex">#000000</span></div>
                     <div class="color-data-rgb">RGB: <span id="color-data-rgb">0, 0, 0</span></div>
                     <div class="color-data-hsv">HSV: <span id="color-data-hsv">0, 0, 0</span></div>
+                </div>
+                <div class="color-index">
+                    <ul>
+                        <li><a href="#h2-fun">功能色</a></li>
+                        <li><a href="#h2-end">结语</a></li>
+                    </ul>
                 </div>
                 <footer>
                     <p>每一款配色方案都是设计师们精心构思的结晶。</p>
