--- a/body/index.html
+++ b/body/index.html
@@ -12,8 +12,12 @@
 <body class="black">
     <div id="content">
         <div class="color-card-list">
-            <h2>头发</h2>
+            <h2 id="h2-hair">头发</h2>
             <div id="color-hair"></div>
+
+            <h2 id="h2-skin">皮肤</h2>
+
+            <h2 id="h2-eye">眼睛</h2>
         </div>
         <div id="color-info">
             <div class="color-info-content">
@@ -23,6 +27,13 @@
                     <div class="color-data-hex">HEX: <span id="color-data-hex">#000000</span></div>
                     <div class="color-data-rgb">RGB: <span id="color-data-rgb">0, 0, 0</span></div>
                     <div class="color-data-hsv">HSV: <span id="color-data-hsv">0, 0, 0</span></div>
+                </div>
+                <div class="color-index">
+                    <ul>
+                        <li><a href="#h2-hair">头发</a></li>
+                        <li><a href="#h2-skin">皮肤</a></li>
+                        <li><a href="#h2-eye">眼睛</a></li>
+                    </ul>
                 </div>
                 <footer>
                     <p>我们采集了许多 ACG 人物的颜色，尽可能地选用了官方配色和官方配色差异较小的人物。人物名称后面的颜色名称仅供参考，对于难以定义的颜色，我们尊重原作者的设定。</p>
