--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
             <div id="color-hair"></div>
 
             <h2 id="h2-end">结语</h2>
-            <p>没有标准答案，没有是非对错，每个人都可以是设计师。冷色、暖色、中性色，任何一种颜色都可以具有含义。相邻、近似、中差、对比、互补，合理的颜色搭配千千万万。</p>
+            <p>没有标准答案，没有是非对错，每个人都可以是设计师。冷色、暖色、中性色，任何一种颜色都可以赋予含义。相邻、近似、中差、对比、互补，合理的颜色搭配千千万万。</p>
             <p>每一款配色方案都是设计师们精心构思的结晶。UI设计的初衷除了体现品牌文化、展现出赏心悦目的界面，更应当追求易用性。图形与颜色的信息传递效率往往要高于文字，优秀的UI设计在美化界面的同时也使得产品方便易用。</p>
             <p>不要总是享受在他人的成果之中，这会限制你的创新思维，永远无法设计出属于自己的独特方案。前人已经为我们铺好了道路，指明了方向。勇于尝试，敢于探索，你就是下一个开拓者。</p>
         </div>
