--- a/serafuku/index.html
+++ b/serafuku/index.html
@@ -10,6 +10,7 @@
     <script src="js/color.js"></script>
 </head>
 <body class="black">
+    <div id="bar-top"></div><div id="btn-top" class="close"><div></div></div>
     <div id="content">
         <div class="color-card-list">
             <h2 id="h2-serafuku">领 · 袖口 · 裙</h2>
@@ -21,6 +22,8 @@
             <h2 id="h2-eri">领</h2>
 
             <h2 id="h2-sukato">裙</h2>
+
+            <h2 id="h2-back">底色</h2>
         </div>
         <div id="color-info">
             <div class="color-info-content">
@@ -37,6 +40,7 @@
                         <li><a href="#h2-sukafu">领巾</a></li>
                         <li><a href="#h2-eri">领</a></li>
                         <li><a href="#h2-sukato">裙</a></li>
+                        <li><a href="#h2-back">底色</a></li>
                     </ul>
                 </div>
                 <footer>
