--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,7 @@
     <script src="js/color.js"></script>
 </head>
 <body class="black">
+    <div id="bar-top"></div><div id="btn-top" class="close"><div></div></div>
     <div id="content">
         <div class="color-card-list">
             <h2 id="h2-fun">功能色</h2>
