--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="memu.js"></script>
 </head>
 <body class="black">
+    <div id="bar-top"></div><div id="btn-top" class="close"><div></div></div>
     <div id="content">
         <div class="color-card-list">
             <h2>关于 光棱镜</h2>
