--- a/body/index.html
+++ b/body/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>身体 - 光棱镜</title>
     <link rel="stylesheet" href="../common/css/common.css">
     <script src="../common/js/jquery-1.7.2.min.js"></script>
@@ -43,6 +43,7 @@
             </div>
         </div>
     </div>
+    <div id="bar-mobile"><p>使用PC端或更大尺寸的设备浏览可获得更好的体验</p></div>
     
 
     <script src="../common/js/common.js"></script>
