--- a/serafuku/index.html
+++ b/serafuku/index.html
@@ -16,7 +16,7 @@
             <h2 id="h2-serafuku">领 · 袖口 · 裙</h2>
             <div id="color-serafuku"></div>
 
-            <h2 id="h2-sukafu">领巾</h2>
+            <h2 id="h2-sukafu">领巾 · 领带</h2>
             <div id="color-sukafu"></div>
 
             <h2 id="h2-eri">领</h2>
@@ -37,7 +37,7 @@
                 <div class="color-index">
                     <ul>
                         <li><a href="#h2-serafuku">领 · 袖口 · 裙</a></li>
-                        <li><a href="#h2-sukafu">领巾</a></li>
+                        <li><a href="#h2-sukafu">领巾 · 领带</a></li>
                         <li><a href="#h2-eri">领</a></li>
                         <li><a href="#h2-sukato">裙</a></li>
                         <li><a href="#h2-back">底色</a></li>
@@ -50,6 +50,7 @@
             </div>
         </div>
     </div>
+    <div id="bar-mobile"><p>使用PC端或更大尺寸的设备浏览可获得更好的体验</p></div>
     
 
     <script src="../common/js/common.js"></script>
