--- a/ui/index.html
+++ b/ui/index.html
@@ -44,6 +44,7 @@
             </div>
         </div>
     </div>
+    <div id="bar-mobile"><p>使用PC端或更大尺寸的设备浏览可获得更好的体验</p></div>
     
 
     <script src="../common/js/common.js"></script>
